	bzfile() and xzfile() for which it means "rb".

    o	R CMD INSTALL now uses the internal untar() in package utils:
	this ensures that all platforms can install bzip2- and
	xz-compressed tarballs.

    o	help(try.all.packages = TRUE) is much faster (although the
	time taken by the OS to find all the packages the first time
	it is used can dominate the time).


DEPRECATED & DEFUNCT

    o	Bundles of packages are defunct.

    o	stats::clearNames() is defunct: use unname().

    o	Basic regular expressions (extended = FALSE) are defunct in
	strsplit, grep and friends.

    o	methods::trySilent() is defunct.

    o	index.search() is no longer exported and has a different
	argument list.


BUG FIXES

    o	trigamma(x) and other psigamma(x,n) calls are now accurate also for
	very large abs(x). (PR#14020)
	[will move to '2.10 patched']


	**************************************************
	*						 *
	*	       2.10 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.10.0


SIGNIFICANT USER-VISIBLE CHANGES

    o	Package help is now converted from Rd by the R-based converters
	that were first introduced in 2.9.0.  This means

	- Packages that were installed by R-devel after 2009-08-09
	  should not be used with earlier versions of R, and most
	  aspects of package help (including the runnable examples)
	  will be missing if they are so used.

	- Text, HTML and latex help and examples for packages
	  installed under the new system are converted on-demand from
	  stored parsed Rd files.  (Conversions stored in packages
	  installed under R < 2.10.0 are used if no parsed Rd files
	  are found.  It is recommended that such packages be
	  re-installed.)


    o	HTML help is now generated dynamically using an HTTP server
	running in the R process and listening on the loopback
	interface.

	- Those worried about security implications of such a server
	  can disable it by setting the environment variable